--- a/client/src/app.html
+++ b/client/src/app.html
@@ -21,12 +21,8 @@
 			href="https://fonts.googleapis.com/css?family=Roboto+Mono"
 		/>
 		<!-- SMUI Styles -->
-		<link rel="stylesheet" href="/smui.css" media="(prefers-color-scheme: light)" />
-		<link
-			rel="stylesheet"
-			href="/smui-dark.css"
-			media="screen and (prefers-color-scheme: dark)"
-		/>
+		<link rel="stylesheet" href="/smui.css" />
+		<link id="theme" rel="stylesheet" href="/smui-dark.css" media="screen" />
 
 		%sveltekit.head%
 	</head>
